Changes for timecards/add path and timecards total hours and start and end on db and routes
